Bug #1579628: Fixed invisibible password label in theme "Modern"
When a wrong password was entered on the login scrren, the password label
could not be read because it was white on white in the "Modern" theme.

Is a generic issue with Modern theme forms

behatnotneeded

(cherry picked from commit 5709e5507dc0a2d9abffac3febe7075944cf6e48)

--- a/htdocs/theme/modern/sass/_custom.scss
+++ b/htdocs/theme/modern/sass/_custom.scss
@@ -45,4 +45,14 @@ body {
     border: 1px solid;
     border-color: lighten($gray-light, 50%) !important;
   }
-} 
+}
+
+// Makes the text darker and field show red outline when a form error is shown
+.has-error {
+  label {
+    color: #545B5D;
+  }
+  .form-control {
+    border-color: #CF2C33;
+  }
+}
